# cyclistic-bike-share-analysis

./: .gitignore  CONTRIBUTING.md  Case Study 1_How does a bike-share navigate speedy success.html  Divvy_Trips_2019_Q1.html  Google Capstone Project.html  LICENSE  README.md  index.html  main_analysis.py  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: cyclistic_presentation.html
data/: Divvy_Trips_2020_Q1.html  README.md
notebooks/: cyclistic_analysis.ipynb
results/: analysis_results.txt  business_recommendations.md
src/: __init__.py  cyclistic_analyzer.py  data_utils.py  visualizations.py
tests/: README.md  test_cyclistic_analysis.py
